Embedding layer implementation

--- a/DL Framework polished.ipynb
+++ b/DL Framework polished.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "source": [
     "import numpy as np\r\n",
     "\r\n",
@@ -11,6 +11,7 @@
     "                 autograd=False,\r\n",
     "                 creators=None,\r\n",
     "                 creation_op=None,\r\n",
+    "                 index_select_indices=None,\r\n",
     "                 id=None):  # ID to uniquely identify the Tensor\r\n",
     "\r\n",
     "        self.data = np.array(data)\r\n",
@@ -19,6 +20,7 @@
     "        self.grad = None\r\n",
     "        self.autograd = autograd\r\n",
     "        self.children = {} # To keep track of Tensor's child tensors\r\n",
+    "        self.index_select_indices = index_select_indices\r\n",
     "\r\n",
     "        # Generate unique integer as an ID to the Tensor\r\n",
     "        if(id is None):\r\n",
@@ -42,7 +44,7 @@
     "        return True\r\n",
     "\r\n",
     "\r\n",
-    "    def backward(self,grad=None, grad_origin=None):\r\n",
+    "    def backward(self, grad=None, grad_origin=None):\r\n",
     "        if(self.autograd):\r\n",
     "            if(grad_origin is not None):\r\n",
     "                if(self.children[grad_origin.id] == 0):\r\n",
@@ -98,6 +100,25 @@
     "                if(\"expand\" in self.creation_op):\r\n",
     "                    dim = int(self.creation_op.split(\"_\")[1])\r\n",
     "                    self.creators[0].backward(self.grad.sum(dim))\r\n",
+    "\r\n",
+    "                if(self.creation_op == \"sigmoid\"):\r\n",
+    "                    ones = Tensor(np.ones_like(self.grad.data))\r\n",
+    "                    self.creators[0].backward(self.grad * (self * (ones - self)))\r\n",
+    "\r\n",
+    "                if(self.creation_op == \"tanh\"):\r\n",
+    "                    ones = Tensor(np.ones_like(self.grad.data))\r\n",
+    "                    self.creators[0].backward(self.grad * (ones - (self * self)))\r\n",
+    "\r\n",
+    "                if(self.creation_op == \"index_select\"):\r\n",
+    "                    new_grad = np.zeros_like(self.creators[0].data)\r\n",
+    "                    indices_ = self.index_select_indices.data.flatten()\r\n",
+    "                    grad_ = self.grad.data.reshape(len(indices_), -1)\r\n",
+    "                    \r\n",
+    "                    # Adding up gradient according to the indices\r\n",
+    "                    for i in range(len(indices_)):\r\n",
+    "                        new_grad[indices_[i]] += grad_[i]\r\n",
+    "\r\n",
+    "                    self.creators[0].backward(Tensor(new_grad))\r\n",
     "\r\n",
     "\r\n",
     "    def __add__(self, other):\r\n",
@@ -172,6 +193,33 @@
     "                            creation_op=\"mm\")\r\n",
     "        return Tensor(self.data.dot(x.data))\r\n",
     "\r\n",
+    "    # Non Linearity functions\r\n",
+    "    def sigmoid(self):\r\n",
+    "        if(self.autograd):\r\n",
+    "            return Tensor(  1 / (1 + np.exp(-self.data)),\r\n",
+    "                            autograd=True,\r\n",
+    "                            creators=[self],\r\n",
+    "                            creation_op=\"sigmoid\")\r\n",
+    "        return Tensor(1 / (1 + np.exp(-self.data)))\r\n",
+    "\r\n",
+    "    def tanh(self):\r\n",
+    "        if(self.autograd):\r\n",
+    "            return Tensor(  np.tanh(self.data),\r\n",
+    "                            autograd=True,\r\n",
+    "                            creators=[self],\r\n",
+    "                            creation_op=\"tanh\")\r\n",
+    "        return Tensor(np.tanh(self.data))\r\n",
+    "\r\n",
+    "    # Embedding Layer support (forward propagation)\r\n",
+    "    def index_select(self, indices):\r\n",
+    "        if(self.autograd):\r\n",
+    "            new = Tensor(self.data[indices.data],\r\n",
+    "                         autograd=True,\r\n",
+    "                         creators=[self],\r\n",
+    "                         creation_op=\"index_select\")\r\n",
+    "            new.index_select_indices = indices\r\n",
+    "            return new\r\n",
+    "        return Tensor(self.data[indices.data])\r\n",
     "\r\n",
     "    def __repr__(self):\r\n",
     "        return str(self.data.__repr__())\r\n",
@@ -190,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "source": [
     "class SGD(object):\r\n",
     "    def __init__(self, parameters, alpha=0.1):\r\n",
@@ -214,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "source": [
     "import numpy\r\n",
     "np.random.seed(0)\r\n",
@@ -265,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "source": [
     "class Layer(object):\r\n",
     "    def __init__(self):\r\n",
@@ -294,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "source": [
     "class Sequential(Layer):\r\n",
     "    def __init__(self, layers=list()):\r\n",
@@ -327,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "source": [
     "data = Tensor(np.array([[0,0],[0,1],[1,0],[1,1]]), autograd=True)\r\n",
     "target = Tensor(np.array([[0],[1],[0],[1]]), autograd=True)\r\n",
@@ -366,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "source": [
     "class MSELoss(Layer):\r\n",
     "    def __init__(self):\r\n",
@@ -387,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "source": [
     "import numpy\r\n",
     "np.random.seed(0)\r\n",
@@ -431,6 +479,155 @@
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "source": [
+    "class Tanh(Layer):\r\n",
+    "    def __init__(self):\r\n",
+    "        super().__init__()\r\n",
+    "\r\n",
+    "    def forward(self, input):\r\n",
+    "        return input.tanh()\r\n",
+    "\r\n",
+    "class Sigmoid(Layer):\r\n",
+    "    def __init__(self):\r\n",
+    "        super().__init__()\r\n",
+    "\r\n",
+    "    def forward(self, input):\r\n",
+    "        return input.sigmoid()\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "source": [
+    "import numpy\r\n",
+    "np.random.seed(0)\r\n",
+    "\r\n",
+    "data = Tensor(np.array([[0,0],[0,1],[1,0],[1,1]]), autograd=True)\r\n",
+    "target = Tensor(np.array([[0],[1],[0],[1]]), autograd=True)\r\n",
+    "\r\n",
+    "model = Sequential([Linear(2,3), Tanh(), Linear(3,1), Sigmoid()])\r\n",
+    "\r\n",
+    "criterion = MSELoss()\r\n",
+    "optim = SGD(parameters=model.get_parameters(), alpha=1)\r\n",
+    "\r\n",
+    "for i in range(10):\r\n",
+    "    pred = model.forward(data)\r\n",
+    "    loss = criterion.forward(pred, target)\r\n",
+    "    loss.backward(Tensor(np.ones_like(loss.data)))\r\n",
+    "    optim.step()\r\n",
+    "    print(loss)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1.06372865]\n",
+      "[0.75148144]\n",
+      "[0.57384259]\n",
+      "[0.39574294]\n",
+      "[0.2482279]\n",
+      "[0.15515294]\n",
+      "[0.10423398]\n",
+      "[0.07571169]\n",
+      "[0.05837623]\n",
+      "[0.04700013]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### This is an implementation of Embedding layer with indices support, To make sure everything work had to add few modifications to the Tensor class including new property `index_select_indices` and backpropagation support for the indices"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "source": [
+    "class Embedding(Layer):\r\n",
+    "\r\n",
+    "    def __init__(self, vocab_size, dim):\r\n",
+    "        super().__init__()\r\n",
+    "\r\n",
+    "        self.vocab_size = vocab_size\r\n",
+    "        self.dim = dim\r\n",
+    "\r\n",
+    "        weight = (np.random.rand(vocab_size, dim) - 0.5)/dim\r\n",
+    "        self.weight = Tensor(weight, autograd=True)\r\n",
+    "\r\n",
+    "        self.parameters.append(self.weight)\r\n",
+    "    \r\n",
+    "    def forward(self, input):\r\n",
+    "        return self.weight.index_select(input)\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "source": [
+    "np.random.seed(0)\r\n",
+    "\r\n",
+    "data = Tensor(np.array([1,2,1,2]), autograd=True)\r\n",
+    "target = Tensor(np.array([[0],[1],[0],[1]]), autograd=True)\r\n",
+    "\r\n",
+    "embed = Embedding(5,3)\r\n",
+    "model = Sequential([embed, Tanh(), Linear(3,1), Sigmoid()])\r\n",
+    "\r\n",
+    "criterion = MSELoss()\r\n",
+    "optim = SGD(parameters=model.get_parameters(), alpha=0.5)\r\n",
+    "\r\n",
+    "for i in range(10):\r\n",
+    "    pred = model.forward(data)\r\n",
+    "    loss = criterion.forward(pred, target)\r\n",
+    "    loss.backward(Tensor(np.ones_like(loss.data)))\r\n",
+    "    optim.step()\r\n",
+    "    print(loss)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0.98874126]\n",
+      "[0.6658868]\n",
+      "[0.45639889]\n",
+      "[0.31608168]\n",
+      "[0.2260925]\n",
+      "[0.16877423]\n",
+      "[0.13120515]\n",
+      "[0.10555487]\n",
+      "[0.08731868]\n",
+      "[0.07387834]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   },
   {
