--- a/DL Framework polished.ipynb
+++ b/DL Framework polished.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 74,
    "source": [
     "import numpy as np\r\n",
     "\r\n",
@@ -20,7 +20,6 @@
     "        self.grad = None\r\n",
     "        self.autograd = autograd\r\n",
     "        self.children = {} # To keep track of Tensor's child tensors\r\n",
-    "        self.index_select_indices = index_select_indices\r\n",
     "\r\n",
     "        # Generate unique integer as an ID to the Tensor\r\n",
     "        if(id is None):\r\n",
@@ -119,6 +118,10 @@
     "                        new_grad[indices_[i]] += grad_[i]\r\n",
     "\r\n",
     "                    self.creators[0].backward(Tensor(new_grad))\r\n",
+    "                \r\n",
+    "                if(self.creation_op == \"cross_entropy\"):\r\n",
+    "                    dx = self.softmax_output - self.target_dist\r\n",
+    "                    self.creators[0].backward(Tensor(dx))\r\n",
     "\r\n",
     "\r\n",
     "    def __add__(self, other):\r\n",
@@ -221,6 +224,30 @@
     "            return new\r\n",
     "        return Tensor(self.data[indices.data])\r\n",
     "\r\n",
+    "    def cross_entropy(self, target_indices):\r\n",
+    "\r\n",
+    "        # Similar to Tensorflow `from_logits=True` parameter in cross_entropy\r\n",
+    "        temp = np.exp(self.data)\r\n",
+    "        softmax_output = temp / np.sum( temp,\r\n",
+    "                                        axis=len(self.data.shape)-1,\r\n",
+    "                                        keepdims=True)\r\n",
+    "\r\n",
+    "        t = target_indices.data.flatten()\r\n",
+    "        p = softmax_output.reshape(len(t),-1)\r\n",
+    "\r\n",
+    "        target_dist = np.eye(p.shape[1])[t]\r\n",
+    "        loss = -(np.log(p) * (target_dist)).sum(1).mean()\r\n",
+    "\r\n",
+    "        if(self.autograd):\r\n",
+    "            out = Tensor(   loss,\r\n",
+    "                            autograd=True,\r\n",
+    "                            creators=[self],\r\n",
+    "                            creation_op=\"cross_entropy\")\r\n",
+    "            out.softmax_output = softmax_output\r\n",
+    "            out.target_dist = target_dist\r\n",
+    "            return out\r\n",
+    "        return Tensor(loss)\r\n",
+    "\r\n",
     "    def __repr__(self):\r\n",
     "        return str(self.data.__repr__())\r\n",
     "    def __str__(self):\r\n",
@@ -238,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 75,
    "source": [
     "class SGD(object):\r\n",
     "    def __init__(self, parameters, alpha=0.1):\r\n",
@@ -262,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 76,
    "source": [
     "import numpy\r\n",
     "np.random.seed(0)\r\n",
@@ -313,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 77,
    "source": [
     "class Layer(object):\r\n",
     "    def __init__(self):\r\n",
@@ -342,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 78,
    "source": [
     "class Sequential(Layer):\r\n",
     "    def __init__(self, layers=list()):\r\n",
@@ -375,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 79,
    "source": [
     "data = Tensor(np.array([[0,0],[0,1],[1,0],[1,1]]), autograd=True)\r\n",
     "target = Tensor(np.array([[0],[1],[0],[1]]), autograd=True)\r\n",
@@ -414,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 80,
    "source": [
     "class MSELoss(Layer):\r\n",
     "    def __init__(self):\r\n",
@@ -435,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 81,
    "source": [
     "import numpy\r\n",
     "np.random.seed(0)\r\n",
@@ -483,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 82,
    "source": [
     "class Tanh(Layer):\r\n",
     "    def __init__(self):\r\n",
@@ -504,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 83,
    "source": [
     "import numpy\r\n",
     "np.random.seed(0)\r\n",
@@ -553,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 84,
    "source": [
     "class Embedding(Layer):\r\n",
     "\r\n",
@@ -576,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 85,
    "source": [
     "np.random.seed(0)\r\n",
     "\r\n",
@@ -614,6 +641,110 @@
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "source": [
+    "class CrossEntropyLoss(object):\r\n",
+    "    def __init__(self):\r\n",
+    "        super().__init__()\r\n",
+    "\r\n",
+    "    def forward(self, input, target):\r\n",
+    "        return input.cross_entropy(target)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "source": [
+    "import numpy\r\n",
+    "np.random.seed(0)\r\n",
+    "# data indices\r\n",
+    "data = Tensor(np.array([1,2,1,2]), autograd=True)\r\n",
+    "# target indices\r\n",
+    "target = Tensor(np.array([0,1,0,1]), autograd=True)\r\n",
+    "\r\n",
+    "model = Sequential([Embedding(3,3), Tanh(), Linear(3,4)])\r\n",
+    "criterion = CrossEntropyLoss()\r\n",
+    "optim = SGD(parameters=model.get_parameters(), alpha=0.1)\r\n",
+    "\r\n",
+    "for i in range(10):\r\n",
+    "    pred = model.forward(data)\r\n",
+    "\r\n",
+    "    loss = criterion.forward(pred, target)\r\n",
+    "    loss.backward(Tensor(np.ones_like(loss.data)))\r\n",
+    "    \r\n",
+    "    optim.step()\r\n",
+    "    print(loss)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1.3885032434928422\n",
+      "0.9558181509266036\n",
+      "0.6823083585795604\n",
+      "0.509525996749312\n",
+      "0.39574491472895856\n",
+      "0.31752527285348264\n",
+      "0.2617222861964216\n",
+      "0.22061283923954225\n",
+      "0.18946427334830068\n",
+      "0.16527389263866668\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "class RNNCell(Layer):\r\n",
+    "    def __init__(self, n_inputs, n_hidden, n_output, activation='sigmoid'):\r\n",
+    "        super().__init__()\r\n",
+    "        self.n_inputs = n_inputs\r\n",
+    "        self.n_hidden = n_hidden\r\n",
+    "        self.n_output = n_output\r\n",
+    "\r\n",
+    "        if(activation == 'sigmoid'):\r\n",
+    "            self.activation = Sigmoid()\r\n",
+    "        elif(activation == 'tanh'):\r\n",
+    "            self.activation == Tanh()\r\n",
+    "        else:\r\n",
+    "            raise Exception(\"Non-linearity not found\")\r\n",
+    "\r\n",
+    "        self.w_ih = Linear(n_inputs, n_hidden)  # Input to Hidden --> dim: vocabulary size\r\n",
+    "        self.w_hh = Linear(n_hidden, n_hidden)  # Hidden to Hidden\r\n",
+    "        self.w_ho = Linear(n_hidden, n_output)  # Hidden to Output --> dim: vocabulary size\r\n",
+    "\r\n",
+    "        self.parameters += self.w_ih.get_parameters()\r\n",
+    "        self.parameters += self.w_hh.get_parameters()\r\n",
+    "        self.parameters += self.w_ho.get_parameters()\r\n",
+    "\r\n",
+    "    def forward(self, input, hidden):\r\n",
+    "        from_prev_hidden = self.w_hh.forward(hidden)\r\n",
+    "        combined = self.w_ih.forward(input) + from_prev_hidden\r\n",
+    "        new_hidden = self.activation.forward(combined)\r\n",
+    "        output = self.w_ho.forward(new_hidden)\r\n",
+    "        return output, new_hidden\r\n",
+    "\r\n",
+    "    def init_hidden(self, batch_size=1):\r\n",
+    "        return Tensor(np.zeros((batch_size, self.n_hidden)), autograd=True)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   },
   {
