--- a/DL Framework polished.ipynb
+++ b/DL Framework polished.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "source": [
     "import numpy as np\r\n",
     "\r\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "source": [
     "class SGD(object):\r\n",
     "    def __init__(self, parameters, alpha=0.1):\r\n",
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "source": [
     "import numpy\r\n",
     "np.random.seed(0)\r\n",
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "source": [
     "class Layer(object):\r\n",
     "    def __init__(self):\r\n",
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "source": [
     "class Sequential(Layer):\r\n",
     "    def __init__(self, layers=list()):\r\n",
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "source": [
     "data = Tensor(np.array([[0,0],[0,1],[1,0],[1,1]]), autograd=True)\r\n",
     "target = Tensor(np.array([[0],[1],[0],[1]]), autograd=True)\r\n",
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "source": [
     "class MSELoss(Layer):\r\n",
     "    def __init__(self):\r\n",
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "source": [
     "import numpy\r\n",
     "np.random.seed(0)\r\n",
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "source": [
     "class Tanh(Layer):\r\n",
     "    def __init__(self):\r\n",
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "source": [
     "import numpy\r\n",
     "np.random.seed(0)\r\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "source": [
     "class Embedding(Layer):\r\n",
     "\r\n",
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "source": [
     "np.random.seed(0)\r\n",
     "\r\n",
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "source": [
     "class CrossEntropyLoss(object):\r\n",
     "    def __init__(self):\r\n",
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "source": [
     "import numpy\r\n",
     "np.random.seed(0)\r\n",
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "source": [
     "class RNNCell(Layer):\r\n",
     "    def __init__(self, n_inputs, n_hidden, n_output, activation='sigmoid'):\r\n",
@@ -719,9 +719,9 @@
     "        else:\r\n",
     "            raise Exception(\"Non-linearity not found\")\r\n",
     "\r\n",
-    "        self.w_ih = Linear(n_inputs, n_hidden)  # Input to Hidden --> dim: vocabulary size\r\n",
+    "        self.w_ih = Linear(n_inputs, n_hidden)  # Input to Hidden --> dim: Embed size\r\n",
     "        self.w_hh = Linear(n_hidden, n_hidden)  # Hidden to Hidden\r\n",
-    "        self.w_ho = Linear(n_hidden, n_output)  # Hidden to Output --> dim: vocabulary size\r\n",
+    "        self.w_ho = Linear(n_hidden, n_output)  # Hidden to Output --> dim: defined size\r\n",
     "\r\n",
     "        self.parameters += self.w_ih.get_parameters()\r\n",
     "        self.parameters += self.w_hh.get_parameters()\r\n",
@@ -741,38 +741,179 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Preparing the data for RNN training for word prediction."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
+   "execution_count": 50,
+   "source": [
+    "import sys, random, math\r\n",
+    "from collections import Counter\r\n",
+    "import numpy as np\r\n",
+    "\r\n",
+    "f = open('./datasets/tasksv11/en/qa1_single-supporting-fact_train.txt','r')\r\n",
+    "raw = f.readlines()\r\n",
+    "f.close()\r\n",
+    "\r\n",
+    "tokens = list()\r\n",
+    "for line in raw[0:1000]:\r\n",
+    "    temp = []\r\n",
+    "    for i in line.lower().replace(\"\\n\",\"\").replace(\"\\t\", \" \").split(\" \")[:]:\r\n",
+    "        if(i != \"\" and not i.isdigit()):\r\n",
+    "            temp.append(i)\r\n",
+    "\r\n",
+    "    tokens.append(temp)\r\n",
+    "\r\n",
+    "# Make all the sentences to the same length if they are not enough by adding \"-\" symbol to the front.\r\n",
+    "new_tokens = list()\r\n",
+    "for line in tokens:\r\n",
+    "    new_tokens.append(['-'] * (6 - len(line)) + line)\r\n",
+    "tokens = new_tokens\r\n",
+    "\r\n",
+    "# Creating the vocabulary with unique words in the dataset\r\n",
+    "vocab = set()\r\n",
+    "for sent in tokens:\r\n",
+    "    for word in sent:\r\n",
+    "        vocab.add(word)\r\n",
+    "vocab = list(vocab)\r\n",
+    "\r\n",
+    "# make word to index mapping\r\n",
+    "word2index = {}\r\n",
+    "for i, word in enumerate(vocab):\r\n",
+    "    word2index[word]=i\r\n",
+    "\r\n",
+    "# Function to turn sentence to list of indices\r\n",
+    "def words2indices(sentence):\r\n",
+    "    idx = list()\r\n",
+    "    for word in sentence:\r\n",
+    "        idx.append(word2index[word])\r\n",
+    "\r\n",
+    "    return idx\r\n",
+    "\r\n",
+    "# Convert all the sentences to list of indices\r\n",
+    "indices = list()\r\n",
+    "for line in tokens:\r\n",
+    "    idx = list()\r\n",
+    "    for w in line:\r\n",
+    "        idx.append(word2index[w])\r\n",
+    "    indices.append(idx)\r\n",
+    "\r\n",
+    "data = np.array(indices)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Building the RNN model with an Embedding layer"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "source": [
+    "embed = Embedding(vocab_size=len(vocab), dim=16)\r\n",
+    "model = RNNCell(n_inputs=16, n_hidden=16, n_output=len(vocab))\r\n",
+    "\r\n",
+    "criterion = CrossEntropyLoss()\r\n",
+    "\r\n",
+    "params = model.get_parameters() + embed.get_parameters()\r\n",
+    "\r\n",
+    "optim = SGD(parameters=params, alpha=0.05)"
+   ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 62,
+   "source": [
+    "batch_size = 100\r\n",
+    "\r\n",
+    "for iter in range(1000):\r\n",
+    "    total_loss = 0\r\n",
+    "    hidden = model.init_hidden(batch_size=batch_size)\r\n",
+    "\r\n",
+    "    # RNN Cell inside training (5 training parts per sequence)\r\n",
+    "    for t in range(5):\r\n",
+    "        input = Tensor(data[0:batch_size, t], autograd=True)\r\n",
+    "        rnn_input = embed.forward(input=input)\r\n",
+    "\r\n",
+    "        output, hidden = model.forward(input=rnn_input, hidden=hidden)\r\n",
+    "\r\n",
+    "    target = Tensor(data[0:batch_size,t+1], autograd=True)\r\n",
+    "    loss = criterion.forward(output, target)\r\n",
+    "\r\n",
+    "    loss.backward()\r\n",
+    "    optim.step()\r\n",
+    "\r\n",
+    "    total_loss += loss.data\r\n",
+    "\r\n",
+    "    if(iter % 200 == 0):\r\n",
+    "        p_correct = (target.data == np.argmax(output.data,axis=1)).mean()\r\n",
+    "        print_loss = total_loss / (len(data)/batch_size)\r\n",
+    "        print(\"Loss:\",print_loss,\"% Correct:\",p_correct)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Loss: 0.3162421422842724 % Correct: 0.0\n",
+      "Loss: 0.16556653764166424 % Correct: 0.26\n",
+      "Loss: 0.1612976424004052 % Correct: 0.32\n",
+      "Loss: 0.15528054860427262 % Correct: 0.31\n",
+      "Loss: 0.14431556676685914 % Correct: 0.38\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Prediction"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 63,
+   "source": [
+    "batch_size = 1\r\n",
+    "hidden = model.init_hidden(batch_size=batch_size)\r\n",
+    "\r\n",
+    "for t in range(5):\r\n",
+    "    input = Tensor(data[0:batch_size, t], autograd=False)\r\n",
+    "    rnn_input = embed.forward(input=input)\r\n",
+    "    output, hidden = model.forward(input=rnn_input, hidden=hidden)\r\n",
+    "\r\n",
+    "target = Tensor(data[0:batch_size,t+1], autograd=False)\r\n",
+    "loss = criterion.forward(output, target)\r\n",
+    "\r\n",
+    "ctx = \"\"\r\n",
+    "for idx in data[0:batch_size][0][0:-1]:\r\n",
+    "    ctx += vocab[idx] + \" \"\r\n",
+    "\r\n",
+    "print(\"Context:\",ctx)\r\n",
+    "print(\"Pred:\", vocab[output.data.argmax()])"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Context: - mary moved to the \n",
+      "Pred: office.\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
